--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Rakshit",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "braintree": "^3.13.0",
     "colors": "^1.4.0",
